--- a/index.html
+++ b/index.html
@@ -6,14 +6,13 @@
 
 	<title>Svelte Poll App</title>
 
-	<link rel='icon' type='image/png' href='https://github.com/arjun391c/ninja-poll/blob/master/favicon.png'>
-	<link rel='stylesheet' href='https://github.com/arjun391c/ninja-poll/blob/master/global.css'>
-	<link rel='stylesheet' href='https://github.com/arjun391c/ninja-poll/blob/master/build/bundle.css'>
+	<link rel='icon' type='image/png' href='/ninja-poll/favicon.png'>
+	<link rel='stylesheet' href='/ninja-poll/global.css'>
+	<link rel='stylesheet' href='/ninja-poll/build/bundle.css'>
 
-	<script defer src='https://github.com/arjun391c/ninja-poll/blob/master/build/bundle.js'></script>
+	<script defer src='/ninja-poll/build/bundle.js'></script>
 </head>
 
 <body>
-	sad
 </body>
 </html>
